--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Your Orders",
-  "name": "Your Orders",
+  "short_name": "CrewBuilder",
+  "name": "CrewBuilder",
   "icons": [
     {
       "src": "favicon.ico",
